Rest endpoint to save item in category
